- New 'maximum' and 'minimum' methods. Work the opposite way to 'min' and 'max' - now are strictly numerical, so correctly order oxygen production rates
- Therefore internal functions auto_rate_min and auto_rate_max have been swapped around in terms of functionality.
- Old methods ('min', 'max') still produce same results as old code but have a prominent warning

Other changes
- reordered operators to put "method" second
- added the Kernel Density metric '$density' to the '$summary' table for the 'linear' method. This allows you to see how the results are ranked in regards to KDE.
- Help docs updated
- tidied and reordered summary S3 printout
  - summary table comes first, only prints out 20 rows max of results (via data.table)
  - new function (print_dens) for printing the density result more compactly
- method = "max" was missing '$total_regs' element from metadata
- updated error messages (including internal fns) to be clear they come from auto_rate



========================== convert_rate() ============================

- NEW: now converts to surface area-specific rates via the 'area' argument (acccepts 4 inputs: mm2, cm2, m2, km2)
- o2.unit = NULL and time.unit = NULL now stop instead of applying a default unit
- However, it now applies a default output unit for mass- and area specific rates as well as absolute.
- $output.unit oxygen amount component now has "O2" appended. e.g. mgO2/h/g, umolO2/day/m2 (done at end, does not affect any conversions).
- time - can now import data and output rates using 'day' as time unit e.g. "mgO2/day/m2"
- oxygen - can now output oxygen used in moles e.g. "molO2/day/kg"


========================== convert_DO() ============================
- Removed ability to accept objects of class `calc_rate`, `auto_rate` or `adjust_rate`. This didn't make any sense in this function as rates are not a DO measure! However - a rate conversion function would be very useful