@@ -41,6 +41,7 @@ export(auto_rate_linear)
 export(auto_rate_lowest)
 export(auto_rate_max)
 export(auto_rate_min)
+export(auto_rate_rolling)
 export(broken_stick)
 export(calc_pcrit)
 export(calc_rate)
