@@ -1,0 +1,25 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/auto_rate_funs.R
+\name{auto_rate_rolling}
+\alias{auto_rate_rolling}
+\title{Perform rolling regression of fixed width and do not reorder results}
+\usage{
+auto_rate_rolling(dt, width, by = "row")
+}
+\arguments{
+\item{dt}{data.frame object.}
+
+\item{width}{numeric.}
+
+\item{by}{string.}
+}
+\value{
+a list object with appended class \code{auto_rate_rolling}
+}
+\description{
+This is an internal function for \code{auto_rate()}
+}
+\examples{
+NULL
+}
+\keyword{internal}
